2005-1-05  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: Added a delete_tempfile flag for execute().

2005-01-05  Christian Schaffner  <chris01@users.sourceforge.net>

	* PkgVersion.pm: Change wording for failed 'fink remove'.

2005-01-02  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* all: updated Copyright notice

2004-12-28  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Don't crash validator when given unknown filetypes.

2004-12-28  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: rewrote execute() to use sudo to drop to user="nobody"

2004-12-27  Chris Zubrzycki <beren12@users.sf.net>

	* PkgVersion.pm: Better description for removing stuck build locks

2004-12-22  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: Fixed prepare_script() removal of blank lines from
	middle of $script. Removed no-longer-needed hack from execute().

2004-12-21  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: prepare_script() may be leaking blank lines, so
	skip them in execute()'s execution loop.

2004-12-21  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm, Services.pm: Replace execute_nonroot_okay()
	wrapper around execute() with an %options flag to execute().

2004-12-20  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: fix error which prevented &enforce_gcc from working
	properly on 10.2.
	* Configure.pm: existing users who run "fink configure" get a default
	answer of "no" for the UseBinaryDist question.

2004-12-20  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: unify execute() and execute_script() into execute().
	Scrap execute_script_nonroot_okay().
	* PkgVersion.pm: Adjust run_script() for new execute().

2004-12-20  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Warn is pkgname field of shlibs looks like a
	version-number.

2004-12-20  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: Add import for POSIX functions. Move parsing of
	scripts from execute_script() into new prepare_script() function.
